--- a/common/components/index.css
+++ b/common/components/index.css
@@ -6,11 +6,10 @@
 html, body {
     width: 100%;
     max-width: 100vw;
-    height: calc(100% - 75px);
-    background: black;
+    background: white;
     margin: 0;
     padding: 0;
-    color: white;
+    color: black;
     font-family: sans-serif;
     height: 100%;
 }
